--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,23 @@
 body {
-    color: #39a6b2;
     font-family: Arial, Helvetica, sans-serif;
-    width: 960px;
+    width: 1080px;
     margin: 0 auto;
+    color: #044b75;
+    text-align: center;
 }
 
 header {
     padding: 40px 35px;
     background-color: #39a6b2;
+    align-content: middle;
 }
 
 header h1 {
     font-weight: bold;
     font-size: 36px;
     color: #fce138;
-    margin: 0;
     float: left;
+    margin: 0;
 }
 
 header a {
@@ -23,9 +25,84 @@ header a {
     color: #fce138;
 }
 
-li {
+nav {
+    width: 70%;
     float: right;
+    text-align: right;
+}
+
+li {
     display: inline;
-    padding: 5px;
+    padding: 10px;
     margin: 7px 0;
+}
+
+form {
+    background-color: #fce138;
+    border: solid 3px #044b75;
+    margin: 0 30px 0px 500px;
+    padding: 10px;
+    color: 044b75;
+    text-align: left;
+}
+
+button {
+    background-color: #044b75;
+    color: #fce138;
+}
+
+#hero {
+    background-image: url("../pictures/hero.jpg");
+    background-color: #fce138;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#what-we-do , #what-you-do {
+    margin: 0 100px;
+    padding: 10px;
+}
+
+#what-we-do {
+    background-color: white;
+}
+
+#what-you-do {
+    background-color: #fce138;
+}
+
+hr.yellow {
+    color: #fce138;
+    margin-block-start: 50px;
+    margin-block-end: 50px;
+}
+
+input {
+    padding 5px;
+}
+
+h1 , h2 {
+    color: 044b75;
+}
+
+div.hero {
+    margin: 0 auto;
+    padding: 50px 30px 100px 30px;
+}
+
+.contactInfo {
+    text-align: left;
+    padding: 10px;
+    float: right;
+    display: flex;
+    flex-direction:column;
+    flex-wrap:wrap;
+}
+
+.google {
+    width: 50%;
+}
+
+footer {
+    clear: both;
 }
