--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,23 +1,28 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body {
     font-family: Arial, Helvetica, sans-serif;
-    width: 1080px;
     margin: 0 auto;
-    color: #044b75;
-    text-align: center;
+    color: #39a6b2;
 }
 
 header {
-    padding: 40px 35px;
+    padding-top: 10px;
+    padding-right: 15px;
+    padding-bottom: 20px;
+    padding-left: 25px;
     background-color: #39a6b2;
-    align-content: middle;
 }
 
 header h1 {
     font-weight: bold;
     font-size: 36px;
     color: #fce138;
-    float: left;
     margin: 0;
+    display: inline;
 }
 
 header a {
@@ -25,84 +30,91 @@ header a {
     color: #fce138;
 }
 
-nav {
-    width: 70%;
+header nav {
     float: right;
-    text-align: right;
-}
-
-li {
-    display: inline;
-    padding: 10px;
     margin: 7px 0;
 }
 
-form {
-    background-color: #fce138;
-    border: solid 3px #044b75;
-    margin: 0 30px 0px 500px;
-    padding: 10px;
-    color: 044b75;
-    text-align: left;
-}
-
-button {
-    background-color: #044b75;
-    color: #fce138;
-}
-
-#hero {
-    background-image: url("../pictures/hero.jpg");
-    background-color: #fce138;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-#what-we-do , #what-you-do {
-    margin: 0 100px;
-    padding: 10px;
-}
-
-#what-we-do {
-    background-color: white;
-}
-
-#what-you-do {
-    background-color: #fce138;
-}
-
-hr.yellow {
-    color: #fce138;
-    margin-block-start: 50px;
-    margin-block-end: 50px;
-}
-
-input {
-    padding 5px;
-}
-
-h1 , h2 {
-    color: 044b75;
-}
-
-div.hero {
-    margin: 0 auto;
-    padding: 50px 30px 100px 30px;
-}
-
-.contactInfo {
-    text-align: left;
-    padding: 10px;
-    float: right;
-    display: flex;
-    flex-direction:column;
-    flex-wrap:wrap;
-}
-
-.google {
-    width: 50%;
+header nav ul li {
+    display: inline;
+    margin: 0 30px;
+    font-weight: lighter;
+    font-size: 22px;
 }
 
 footer {
-    clear: both;
-}
+    background: #fce138;
+    width: 100%;
+    padding: 40px 35px;
+  }
+
+footer h2 {
+    display: inline;
+    color: #024e76;
+    font-size: 30px;
+    margin: 0;
+  }
+
+footer div {
+    float: right;
+    line-height: 1.5;
+    text-align: right;
+  }
+
+footer a {
+    color: #024e76;
+  }
+  
+  section {
+    padding: 60px;    
+  }
+  
+  .hero {
+      background-image: url("../images/hero-bg.jpg");
+      height: 600px;
+      background-size: cover;
+      background-position: center;
+      position: relative;
+  }
+  
+  .hero-form {
+      background-color: #fce138;
+      padding: 20px;
+      width: 500px;
+      color: #024e76;
+      border: solid 3px #024e76;
+      position: absolute;
+      bottom: 120px;
+      right: 140px;
+  }
+
+  hero-form h3 {
+    font-size: 24px;
+    margin: 0;
+  }
+  
+  .hero-form p {
+    margin: 5px 0 15px 0;
+  }
+  
+  .form-input {
+    border: 1px solid #024e76;
+    display: block;
+    padding: 7px 15px;
+    font-size: 16px;
+    color: #024e76;
+    width: 100%;
+    margin-bottom: 15px;
+  }
+
+  .hero-form label {
+    margin: 0 5px;
+  }
+
+  .hero-form button {
+    color: #fce138;
+    background-color: #024e76;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+  }
