--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -223,3 +223,42 @@ footer a {
     font-size: 17px;
     line-height: 1.3;
   }
+
+  .contact {
+    text-align: center;
+    background: #024e76;
+  }
+
+  .contact h2 {
+    color: #fce138;
+  }
+
+  .contact-info iframe {
+    width: 400px;
+    height: 400px;
+  }
+
+  .contact-info div {
+    width: 410;
+    display: inline-block;
+    vertical-align: top;
+    text-align: left;
+    margin: 30px 0 0 60px;
+    color: white;
+  }
+
+  .contact-info h3 {
+    color: #fce138;
+    font-size: 32px;
+  }
+
+  .contact-info p, .contact-info address {
+    margin: 20px 0;
+    line-height: 1.5;
+    font-size: 20px;
+    font-size: normal;
+  }
+
+  .contact-info a {
+    color: #fce138;
+  }
