--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ body {
     margin: 0 auto;
     color: #39a6b2;
 }
-
+/*HEADER STYLES*/
 header {
     padding-top: 10px;
     padding-right: 15px;
@@ -41,6 +41,9 @@ header nav ul li {
     font-weight: lighter;
     font-size: 22px;
 }
+/*HEADER STYLES END*/
+
+/*FOOTER STYLES*/
 
 footer {
     background: #fce138;
@@ -68,7 +71,10 @@ footer a {
   section {
     padding: 60px;    
   }
-  
+/* FOOTER STYLES END */
+
+/* HERO STYLES & FORM */
+
   .hero {
       background-image: url("../images/hero-bg.jpg");
       height: 600px;
@@ -118,6 +124,9 @@ footer a {
     padding: 10px 20px;
     font-size: 16px;
   }
+/* HERO SECTION STYLES END */
+
+/* WHAT WE DO STYLES */
 
   .intro {
     text-align: center;
@@ -130,6 +139,9 @@ footer a {
     font-size: 20px;
     margin: 0 auto;
   }
+/* WHAT WE DO STYLES END */
+
+/* WHAT YOU DO STYLES */
 
   .steps {
     text-align: center;
@@ -176,7 +188,9 @@ footer a {
   .steps span {
     font-size: 38px;
   }
+/* WHAT YOU DO STYLES END */
 
+/* MEET THE TRAINERS STYLES */
   .trainers {
     text-align: center;
   }
@@ -223,7 +237,9 @@ footer a {
     font-size: 17px;
     line-height: 1.3;
   }
+/* MEET THE TRAINERS STYLES END */
 
+/* REACH OUT STYLES */
   .contact {
     text-align: center;
     background: #024e76;
@@ -262,3 +278,5 @@ footer a {
   .contact-info a {
     color: #fce138;
   }
+
+  /* REACH OUT STYLES END */
