--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,12 +36,27 @@ header nav {
     margin: 7px 0;
 }
 
+header nav ul {
+  diplay: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+}
+
 header nav ul li {
     display: inline;
     margin: 0 30px;
     font-weight: lighter;
     font-size: 22px;
 }
+
+header nav ul li a {
+  margin: 0 30px;
+  font-weight: lighter;
+  font-size: 1.55vw;
+}
+
 /*HEADER STYLES END*/
 
 /*FOOTER STYLES*/
