--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,43 +168,44 @@ footer a {
   }
 /* HERO SECTION STYLES END */
 
+/*Main Content Styles*/
+.flex-row {
+  display: flex;
+}
+
+.section-title {
+  font-size: 55px;
+  color: #024e76;
+  border-bottom: 3px solid;
+  padding-bottom: 20px;
+  text-align: center;
+  margin: 0 auto 35px auto;
+  width: 50%;
+}
+
+.primary-border {
+  border-color: #fce138;
+}
+
+.secondary-border {
+  border-color: #39a6b2;
+}
+/*Main Content Styles End*/
+
 /* WHAT WE DO STYLES */
-
-  .intro {
-    text-align: center;
-  }
-
   .intro p {
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
   }
 /* WHAT WE DO STYLES END */
 
 /* WHAT YOU DO STYLES */
-
   .steps {
-    text-align: center;
     background: #fce138;
-  }
-
-  .section-title {
-    font-size: 55px;
-    color: #024e76;
-    margin-bottom: 35px;
-    padding 0 100px 20px 100px;
-    display: inline-block;
-    border-bottom: 3px solid;
-  }
-
-  .primary-border {
-    border-color: #fce138;
-  }
-
-  .secondary-border {
-    border-color: #39a6b2;
   }
 
   .steps div {
@@ -234,7 +235,6 @@ footer a {
 
 /* MEET THE TRAINERS STYLES */
   .trainers {
-    text-align: center;
   }
 
   .trainer {
@@ -283,7 +283,6 @@ footer a {
 
 /* REACH OUT STYLES */
   .contact {
-    text-align: center;
     background: #024e76;
   }
 
