--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,11 +84,13 @@ footer div {
 footer a {
     color: #024e76;
   }
-  
-  section {
-    padding: 60px;    
-  }
 /* FOOTER STYLES END */
+
+/*Section styles*/
+section {
+  padding: 60px;    
+}
+/*Section styles end*/
 
 /* HERO STYLES & FORM */
 
@@ -294,6 +296,17 @@ footer a {
 /* MEET THE TRAINERS STYLES END */
 
 /* REACH OUT STYLES */
+  .contact-info {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+
+  .contact-info > * {
+    flex: 1;
+    margin: 15px;
+  }
+
   .contact {
     background: #024e76;
   }
@@ -303,16 +316,10 @@ footer a {
   }
 
   .contact-info iframe {
-    width: 400px;
     height: 400px;
   }
 
   .contact-info div {
-    width: 410;
-    display: inline-block;
-    vertical-align: top;
-    text-align: left;
-    margin: 30px 0 0 60px;
     color: white;
   }
 
@@ -324,12 +331,33 @@ footer a {
   .contact-info p, .contact-info address {
     margin: 20px 0;
     line-height: 1.5;
-    font-size: 20px;
+    font-size: 16px;
     font-size: normal;
   }
 
   .contact-info a {
     color: #fce138;
+  }
+
+  .contact-form input, .contact-form textarea {
+    border: 1px solid #024e76;
+    display: block;
+    padding: 7px 15px;
+    font-size: 16px;
+    color: #024e76;
+    width: 100%;
+    margin-bottom: 15px;
+    margin-top: 5px;
+  }
+
+  .contact-form button {
+    width: 100%;
+    border: none;
+    background: #fce138;
+    color: #024e76;
+    text-align: center;
+    padding: 15px 0;
+    font-size: 16px;
   }
 
   /* REACH OUT STYLES END */
