created aesthetic design for forms and removed bottom borderr on steps

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,7 @@ header nav {
 }
 
 header nav ul {
-  diplay: flex;
+  display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
@@ -65,6 +65,13 @@ header nav ul li a {
   font-weight: lighter;
   font-size: 1.55vw;
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+header nav ul li a:hover {
+  background: #fce138;
+  color: #024e76;
+  border-radius: 15px;
+  text-shadow: none;
 }
 
 /*HEADER STYLES END*/
@@ -163,12 +170,18 @@ section {
   .form-input {
     border: 1px solid #024e76;
     border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.75);
     display: block;
     padding: 7px 15px;
     font-size: 16px;
     color: #024e76;
     width: 100%;
     margin-bottom: 15px;
+  }
+
+  .form-input:focus {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
   }
 
   .hero-form label {
@@ -182,6 +195,10 @@ section {
     border-radius: 10px;
     padding: 10px 20px;
     font-size: 16px;
+  }
+
+  .hero-form button:hover {
+    background-color: #39a6b2;  
   }
 /* HERO SECTION STYLES END */
 
@@ -234,6 +251,15 @@ section {
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+  }
+
+  .step:last-child {
+    border-bottom: none;
+  }
+
+
+  .step:nth-child(even) {
+    border-bottom: 1px solid #39a6b2;
   }
 
   .step h3 {
@@ -375,6 +401,11 @@ section {
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
+  }
+
+  .contact-form button:hover {
+    color: #fce138;
+    background: #39a6b2;
   }
 
   /* REACH OUT STYLES END */
