--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,6 +128,8 @@ section {
       justify-content: center;
       align-items: flex-start;
       flex-wrap: wrap;
+      background-attachment: fixed;
+      background-position: 80%;
   }
 
   /*secondary page hero*/
